text aligned better on about and design page, screenshot tab removed. Fix to resizing

--- a/public/css/design.css
+++ b/public/css/design.css
@@ -156,7 +156,7 @@ body
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 1.2em;
+    font-size: 2vh;
     text-transform: uppercase;
   }
   
@@ -210,6 +210,28 @@ footer
   color: white;
 }
 
+@media (max-width: 500px)
+{
+  .screenshots-grid
+  {
+    grid-template-columns: repeat(1, 1fr);
+    grid-auto-rows: auto;
+  }
+}
+
+
+@media (max-width: 650px) and (min-width: 500px)
+{
+  .screenshots-grid
+  {
+    grid-template-columns: repeat(1, 1fr);
+    grid-auto-rows: auto;
+  }
+
+}
+
+
+
   @media (max-width: 850px)
   {
       h1 
@@ -222,8 +244,23 @@ footer
       display: none;
     }
 
+    #design-text-left-image
+{
+  color: white;
+  width: 100%;
+  margin: 2%;
+  margin-left: 10%;
+  margin-right: 0%;
+  padding-left: 0%;
+  padding-right: 0%;
+  font-size: 23px;
+  text-shadow: 2px 2px rgba(2,0,36,1);
+  line-height: 35px;
+  letter-spacing: 0.1em;
+}
   }
-  @media(max-width: 760px)
+
+  @media(max-width: 1000px)
   {
    .navbar
    {
@@ -264,3 +301,12 @@ footer
       text-shadow: 5px 5px 5px rgb(0, 2, 5);
     }
   }
+  
+  @media (max-width:1500px) and (min-width:500px)
+{
+  .screenshots-grid
+  {
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: auto;
+  }
+}
