--- a/public/css/index.css
+++ b/public/css/index.css
@@ -48,7 +48,7 @@ body
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 1.2em;
+  font-size: 2vh;
   text-transform: uppercase;
   text-shadow: 2px 2px rgba(2,0,36,1);
 }
@@ -216,7 +216,39 @@ footer
   color: white;
 }
 
- @media (max-width: 650px) and (min-width: 350px)
+@media (max-width: 350px)
+{
+  h1 
+ {
+    font-size:  0.5em;
+ }
+
+
+  
+ .header-image
+  {
+    min-height: 200px;   
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    position: relative;
+    width: 100%;
+  }  
+}
+
+@media (max-width: 500px)
+{
+  .screenshots-grid
+  {
+    grid-template-columns: repeat(1, 1fr);
+    grid-auto-rows: auto;
+  }
+
+
+
+}
+
+@media (max-width: 650px) and (min-width: 350px)
 {
   .header-image
   {
@@ -232,103 +264,16 @@ footer
       font-size:  0.7em;
   }
 
-  
-
-  #about-image
-  {
-    display: none;
-  } 
-
   .screenshots-grid
   {
     grid-template-columns: repeat(1, 1fr);
-    grid-auto-rows: 100px;
+    grid-auto-rows: auto;
   }
 
 }
 
-@media (max-width:1000px) and (min-width:500px)
-{
-  .screenshots-grid
-  {
-    grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: 200px;
-  }
-}
 
-
-
-@media (max-width: 1050px) and (min-width: 980px)
-{
-  #about-image
-  {   
-    margin-top: 50%;  
-    margin-bottom: 10%;
-    border-radius: 50%;
-    margin-left: 0%;
-    margin-left: 30%;
-    padding-left: 0%;
-    height: 200px;
-    width: 200px;
-  }
-}
-
-@media (max-width: 500px)
-{
-  .screenshots-grid
-  {
-    grid-template-columns: repeat(1, 1fr);
-    grid-auto-rows: 100px;
-  }
-}
- @media (max-width: 980px) and (min-width: 650px)
-{ 
-  h1 
-  {
-      font-size:  1.0em;
-  }
-
-  .header-image
-  {
-    min-height: 400px;   
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    position: relative;
-    width: 100%;
-  }  
-
-  #about-image
-  {     
-    display: none;
-  }
-}
-
-@media (max-width: 350px)
-{
-  h1 
- {
-    font-size:  0.5em;
- }
-
-  #about-image
- {
-    display: none;
- } 
-  
- .header-image
-  {
-    min-height: 200px;   
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    position: relative;
-    width: 100%;
-  }  
-}
-
-
- @media(max-width: 760px)       /* RESIZING OF NAV BAR*/
+@media(max-width: 1000px)       /* RESIZING OF NAV BAR*/
 {
  .navbar
  {
@@ -370,17 +315,103 @@ footer
   }
 }
 
-@media(max-width: 1300px) and (min-width: 1050px)
+
+@media (max-width: 980px) and (min-width: 650px)
+{ 
+  h1 
+  {
+      font-size:  1.0em;
+  }
+
+  .header-image
+  {
+    min-height: 400px;   
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    position: relative;
+    width: 100%;
+  }  
+
+
+}
+
+@media (max-width:1000px) and (min-width:500px)
+{
+  .screenshots-grid
+  {
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: auto;
+  }
+}
+
+
+@media(max-width: 1250px) and (min-width: 0px)
+{
+  #about-image
+  {
+    display: none;
+  } 
+
+  #about-text
+  {
+      color: white;
+      width: 100%;
+      margin: 2%;
+      margin-left: 0%;
+      margin-right: 0%;
+      padding-left: 10%;
+      padding-right: 10%;
+      font-size: 2vh;
+      line-height: 30px;
+      text-shadow: 2px 2px rgba(2,0,36,1);
+  }
+
+}
+
+@media(max-width: 1700px)  and (min-width:1250px)
 {
   #about-image
   {   
     margin-top: 50%;  
     margin-bottom: 10%;
-    border-radius: 50%;
+    border-radius: 5%;
     margin-left: 0%;
     margin-left: 30%;
     padding-left: 0%;
-    height: 250px;
-    width: 250px;
+    height: 280px;
+    width: 280px;
   }
+
+
+@media (max-width: 1800px)  and (min-width:1700px)
+{
+  #about-image
+  {   
+    margin-top: 40%;  
+    margin-bottom: 10%;
+    border-radius: 5%;
+    margin-left: 0%;
+    margin-left: 30%;
+    padding-left: 0%;
+    height: 300px;
+    width: 300px;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 }
